tests/baselines/reference/conflictingMemberTypesInBases.errors.txt
==== tests/cases/compiler/conflictingMemberTypesInBases.ts (1 errors) ====
    interface A {
        m: string;
    }
    interface B extends A {
    }
    interface C {
        m: number;
    }
    interface D extends C {
    }
    
    interface E extends B { } // Error here for extending B and D
              ~
!!! conflictingMemberTypesInBases.ts(12,11): error TS2189: Interface 'E' cannot simultaneously extend types 'B' and 'D':
!!! Named properties 'm' of types 'B' and 'D' are not identical.
    interface E extends D { } // No duplicate error here
    